--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
+*, ::after, ::before{
   margin: 0;
+  box-sizing: border-box;
+}
+body {
+  background: #15161a;
+  margin: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +17,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
